fixed z-index

--- a/src/style.css
+++ b/src/style.css
@@ -173,15 +173,15 @@ section > div {
   max-width: 45rem;
 }
 
-section[id="skills"] > div > div {
+.txtWrapper {
   max-width: 40rem;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
-section[id="skills"] > div > div > p {
+.txtWrapper > p {
   transition: all 0.2s;
 }
-section[id="skills"] > div > div > p:hover {
+.txtWrapper > p:hover {
   transform: scale(1.1);
   color: whitesmoke;
 }
@@ -266,7 +266,7 @@ section h1:hover {
 }
 
 #logo {
-  color: white;
+  color: var(--primary);
   margin-left: 2rem;
 }
 .row {
@@ -275,7 +275,6 @@ section h1:hover {
   gap: 0.5rem;
   margin-top: 0.5rem;
   align-items: center;
-  flex-wrap: wrap;
 }
 
 .row > img {
@@ -284,12 +283,15 @@ section h1:hover {
   width: 2.5rem;
   margin-top: 0.3rem;
   object-fit: contain;
-  animation: Spin infinite 20s linear;
+  position: relative;
 }
 
 .row > img:hover {
-  transform: scale(1.1) rotate(0deg);
+  transform: scale(1.5) rotate(0deg);
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
+
 .flex {
   display: flex;
   flex-direction: column;
@@ -336,6 +338,11 @@ section h1:hover {
     transform: translateY(0);
   }
 }
+@media (hover: none) {
+  .row > img {
+    animation: Spin infinite 20s linear;
+  }
+}
 
 @media (max-width: 768px) {
   nav > ul {
@@ -351,6 +358,7 @@ section h1:hover {
     margin-left: auto;
   }
   nav > ul.active {
+    z-index: 9999;
     position: fixed;
     display: flex;
     flex-direction: column;
@@ -381,7 +389,7 @@ section h1:hover {
     width: 60%;
     height: 4px;
     border-radius: 50px;
-    background-color: white;
+    background-color: var(--primary);
   }
   #ham,
   #ham > div {
@@ -437,5 +445,11 @@ section h1:hover {
   }
   .secImg {
     min-width: 100%;
+  }
+}
+
+@media (max-width: 330px) {
+  .row {
+    flex-wrap: wrap;
   }
 }
